--- a/.github/workflows/build_for_a6p.yml
+++ b/.github/workflows/build_for_a6p.yml
@@ -43,7 +43,7 @@ jobs:
           sed -i "s/compiler.compile/compiler.compileTemplate/g" ./node_modules/aiot-vue-cli/web-loaders/falcon-vue-loader/lib/template-compiler/index.js
           sed -i "s/const replaceValues = {}/const replaceValues = { 'defineComponent': '' }/g" ./node_modules/aiot-vue-cli/src/libs/rollup.config.js
           cd ..
-          rm ./jsapi/CMakeLists.txt && mv ./jsapi/cmakepatch.txt ./jsapi/CMakeLists.txt
+          sed -i '/project(/a\set(CMAKE_DEPEND_INFO_SKIP 1)\nset(CMAKE_LINK_DEPENDS_USE_LINKER 0)' ./jsapi/CMakeLists.txt
           ./tools/build.sh
 
       - name: Collect AMR files
