--- a/ui/src/app.json
+++ b/ui/src/app.json
@@ -2,7 +2,7 @@
   "pages": {
     "index": "pages/index/index.vue",
     "ai": "pages/ai/ai.vue",
-    "shell": "pages/shell/index.vue",
+    "shell": "pages/shell/shell.vue",
     "softKeyboard": "pages/softKeyboard/softKeyboard.vue",
     "aiSettings": "pages/aiSettings/aiSettings.vue",
     "aiHistory": "pages/aiHistory/aiHistory.vue",
