--- a/ui/src/app.json
+++ b/ui/src/app.json
@@ -2,6 +2,7 @@
   "pages": {
     "index": "pages/index/index.vue",
     "ai": "pages/ai/ai.vue",
+    "update": "pages/update/update.vue",
     "shell": "pages/shell/shell.vue",
     "softKeyboard": "pages/softKeyboard/softKeyboard.vue",
     "aiSettings": "pages/aiSettings/aiSettings.vue",
