--- a/ui/package.json
+++ b/ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "工具箱",
+  "name": "PenTool",
   "appid": "8001749644971193",
-  "version": "1.10.1",
-  "description": "一个方便用户使用的工具箱",
+  "version": "1.2.10",
+  "description": "一个简单易用的工具箱",
   "icon": "app_icon.png",
   "quickjs": {
     "version": "20200705",
