--- a/ui/src/app.json
+++ b/ui/src/app.json
@@ -2,6 +2,7 @@
   "pages": {
     "index": "pages/index/index.vue",
     "ai": "pages/ai/ai.vue",
+    "camera": "pages/camera/camera.vue",
     "update": "pages/update/update.vue",
     "about": "pages/about/about.vue",
     "shell": "pages/shell/shell.vue",
